--- a/.env.example
+++ b/.env.example
@@ -37,13 +37,13 @@ GRAPH_SCOPES=https://graph.microsoft.com/CustomDetection.ReadWrite.All
 # ============================================================================
 
 # Azure Subscription ID (required for Sentinel analytics rules)
-# AZURE_SUBSCRIPTION_ID=your-subscription-id-here
+AZURE_SUBSCRIPTION_ID=your-subscription-id-here
 
 # Azure Resource Group containing your Sentinel workspace
-# AZURE_RESOURCE_GROUP=your-resource-group-here
+AZURE_RESOURCE_GROUP=your-resource-group-here
 
 # Microsoft Sentinel Workspace Name
-# SENTINEL_WORKSPACE_NAME=your-sentinel-workspace-here
+SENTINEL_WORKSPACE_NAME=your-sentinel-workspace-here
 
 # Azure Management API Base URL
 AZURE_MANAGEMENT_BASE_URL=https://management.azure.com
